Config setup fixes

--- a/.env
+++ b/.env
@@ -11,4 +11,9 @@ SQLALCHEMY_PASSWORD = Luci2012
 SQLALCHEMY_DATABASE_NAME = ssflask
 SQLALCHEMY_TABLE = passwords_table
 #SQLALCHEMY_DB_SCHEMA = public
-SQLALCHEMY_TRACK_MODIFICATIONS = os.environ.get('SQLALCHEMY_TRACK_MODIFICATIONS')
+SQLALCHEMY_TRACK_MODIFICATIONS = False
+
+USER_DIRECTORY_BASE = /home/don/devel/ssflask_content_files/
+USER_DIRECTORY_STATIC = /home/don/devel/ssflask_content_files/
+USER_DIRECTORY_IMAGES = /home/don/devel/ssflask2/ssfl/static/gallery/
+TEMP_FILE_LOC = /home/don/devel/temp/photo/
