--- a/.env_PA
+++ b/.env_PA
@@ -11,4 +11,9 @@ SQLALCHEMY_PASSWORD=Luci2012
 SQLALCHEMY_DATABASE_NAME='doxley$ssflask'
 SQLALCHEMY_TABLE = passwords_table
 #SQLALCHEMY_DB_SCHEMA = public
-SQLALCHEMY_TRACK_MODIFICATIONS = os.environ.get('SQLALCHEMY_TRACK_MODIFICATIONS')
+SQLALCHEMY_TRACK_MODIFICATIONS = False
+
+USER_DIRECTORY_BASE = /home/doxley/ssflask2/work/
+USER_DIRECTORY_STATIC = /home/doxley/ssflask2/ssfl/static/
+USER_DIRECTORY_IMAGES = /home/doxley/ssflask2/work/gallery/
+TEMP_FILE_LOC = /home/doxley/temp/photo/
