Set up Alembic for Database, Set up framework (non-working) for Testing, Add changes for shortcode processing to create URLs for downloads (also not yet working)

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ TESTING=True
 DEBUG=True
 SECRET_KEY=_5#y2L"F4E?9*&xec]/_5#y2L"F4E?9*&xec]/
 SESSION_COOKIE_NAME=my_cookie
+SERVER_NAME=localhost:5000
 
 # Database
 ######  NOTE!! - the database name is used from the Database URI - not the DATABASE_NAME parameter!!
