Add initial ability to publish plug-in to front page with mini-calendar. Create supporting query to retrieve data.

--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ SERVER_NAME=localhost:5000
 
 # Database
 ######  NOTE!! - the database name is used from the Database URI - not the DATABASE_NAME parameter!!
-SQLALCHEMY_DATABASE_URI = mysql+pymysql://don:Luci2012@localhost/ssflask
+SQLALCHEMY_DATABASE_URI = mysql+pymysql://don:Luci2012@localhost/ssflask2
 SQLALCHEMY_USERNAME = don
 SQLALCHEMY_PASSWORD = Luci2012
-SQLALCHEMY_DATABASE_NAME = ssflask
+SQLALCHEMY_DATABASE_NAME = ssflask2
 SQLALCHEMY_TABLE = passwords_table
 #SQLALCHEMY_DB_SCHEMA = public
 SQLALCHEMY_TRACK_MODIFICATIONS = False
