Add operations to insert a docx page, translate to html, add to database, remove from database, delete the file

--- a/.env
+++ b/.env
@@ -17,4 +17,5 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False
 USER_DIRECTORY_BASE = /home/don/devel/ssflask_content_files/
 USER_DIRECTORY_STATIC = /home/don/devel/ssflask_content_files/
 USER_DIRECTORY_IMAGES = /home/don/devel/ssflask2/ssfl/static/gallery/
-TEMP_FILE_LOC = /home/don/devel/temp/photo/
+TEMP_FILE_LOC = /home/don/devel/temp/ssflask/
+STORAGE_CONTAINER = /home/don/devel/ssflask_content_files/cloudy/
