--- a/.env_PA
+++ b/.env_PA
@@ -18,3 +18,5 @@ USER_DIRECTORY_BASE = /home/doxley/ssflask2/work/
 USER_DIRECTORY_STATIC = /home/doxley/ssflask2/ssfl/static/
 USER_DIRECTORY_IMAGES = /home/doxley/ssflask2/work/gallery/
 TEMP_FILE_LOC = /home/doxley/temp/photo/
+
+STORAGE_CONTAINER = /home/doxley/ssflask2/work/cloudy/
