--- a/.env_PA
+++ b/.env_PA
@@ -3,6 +3,7 @@ DEBUG=True
 SECRET_KEY=_5#y2L"F4E?9*&xec]/_5#y2L"F4E?9*&xec]/
 SESSION_COOKIE_NAME=my_cookie
 SERVER_NAME=doxley.pythonanywhere.com
+LOG_DIRECTORY=/home/doxley/ssflask2/logs/
 
 # Database
 ######  NOTE!! - the database name is used from the Database URI - not the DATABASE_NAME parameter!!
