--- a/.env
+++ b/.env
@@ -14,9 +14,10 @@ SQLALCHEMY_DATABASE_NAME = ssflask2
 SQLALCHEMY_TABLE = passwords_table
 #SQLALCHEMY_DB_SCHEMA = public
 SQLALCHEMY_TRACK_MODIFICATIONS = False
+SQLALCHEMY_DATABASE_HOST = localhost
 
 USER_DIRECTORY_BASE = /home/don/devel/ssflask_content_files/
 USER_DIRECTORY_STATIC = /home/don/devel/ssflask_content_files/
 USER_DIRECTORY_IMAGES = /home/don/devel/ssflask2/ssfl/static/gallery/
-TEMP_FILE_LOC = /home/don/devel/temp/ssflask/
+TEMP_FILE_LOC = /home/don/devel/temp/
 STORAGE_CONTAINER = /home/don/devel/ssflask_content_files/cloudy/
