--- a/.env_PA
+++ b/.env_PA
@@ -14,10 +14,11 @@ SQLALCHEMY_DATABASE_NAME='doxley$ssflask'
 SQLALCHEMY_TABLE = passwords_table
 #SQLALCHEMY_DB_SCHEMA = public
 SQLALCHEMY_TRACK_MODIFICATIONS = False
+SQLALCHEMY_DATABASE_HOST = doxley.mysql.pythonanywhere-services.com
 
 USER_DIRECTORY_BASE = /home/doxley/ssflask2/work/
 USER_DIRECTORY_STATIC = /home/doxley/ssflask2/ssfl/static/
 USER_DIRECTORY_IMAGES = /home/doxley/ssflask2/work/gallery/
-TEMP_FILE_LOC = /home/doxley/temp/photo/
+TEMP_FILE_LOC = /home/doxley/temp/
 
 STORAGE_CONTAINER = /home/doxley/ssflask2/work/cloudy/
