Fix host name and url in config and photo_upload

--- a/.env_PA
+++ b/.env_PA
@@ -4,6 +4,7 @@ SECRET_KEY=_5#y2L"F4E?9*&xec]/_5#y2L"F4E?9*&xec]/
 SESSION_COOKIE_NAME=my_cookie
 SERVER_NAME=doxley.pythonanywhere.com
 LOG_DIRECTORY=/home/doxley/ssflask2/logs/
+SYSTEM_HOST = http://doxley.pythonanywhere.com
 
 # Database
 ######  NOTE!! - the database name is used from the Database URI - not the DATABASE_NAME parameter!!
