--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ SECRET_KEY=_5#y2L"F4E?9*&xec]/_5#y2L"F4E?9*&xec]/
 SESSION_COOKIE_NAME=my_cookie
 SERVER_NAME=localhost:5000
 LOG_DIRECTORY=/home/don/devel/ssflask_content_files/logs/
+SYSTEM_HOST = http://localhost:5000
 
 # Database
 ######  NOTE!! - the database name is used from the Database URI - not the DATABASE_NAME parameter!!
