--- a/package.json
+++ b/package.json
@@ -4,33 +4,34 @@
   "description": "Package for files for Sunnyside Resident Website",
   "main": "ssfl/sass/mystyles.scss",
   "dependencies": {
-    "@fullcalendar/core": "^4.3.1",
-    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/core": "^4.4.0",
+    "@fullcalendar/daygrid": "^4.4.0",
     "amdefine": ">=0.1.0",
     "babel-preset-env": "^1.7.0",
     "backbone": "^1.4.0",
     "dropzone": "^5.7.0",
     "flask": "^0.2.10",
-    "jquery": "^3.4.1",
-    "react": "^16.12.0",
+    "jquery": "^3.5.0",
+    "react": "^16.13.1",
+    "require.js": "^1.0.0",
+    "requirejs": "^2.3.6",
     "shebang-loader": "0.0.1",
-    "underscore": "^1.9.1"
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
     "amdefine": "^1.0.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "bulma": "^0.8.0",
-    "css-loader": "^3.3.2",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
     "imports-loader": "^0.8.0",
     "jQuery": "^1.7.4",
-    "node-sass": "^4.13.0",
-    "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "node-sass": "^4.13.1",
+    "style-loader": "^1.1.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "css-build": "node-sass --omit-source-map-url ssfl/sass/mystyles.scss ssfl/static/css/mystyles.css",
