Capture npm driven updates

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "backbone": "^1.4.0",
     "dropzone": "^5.7.0",
     "flask": "^0.2.10",
-    "jquery": "^3.4.1",
+    "fullcalendar": "^3.10.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "shebang-loader": "0.0.1",
     "underscore": "^1.9.1"
@@ -24,19 +25,22 @@
     "amdefine": "^1.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.3.2",
+    "bootstrap": "^4.4.1",
+    "css-loader": "^3.5.3",
+    "html-webpack-plugin": "^4.2.0",
     "imports-loader": "^0.8.0",
-    "jQuery": "^1.7.4",
+    "jquery": "^3.5.0",
     "node-sass": "^4.14.0",
-    "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "style-loader": "^1.2.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "css-build": "node-sass --omit-source-map-url ssfl/sass/mystyles.scss ssfl/static/css/mystyles.css",
     "css-watch": "npm run css-build -- --watch",
-    "start": "npm run css-watch",
-    "build-remove-for-production": "webpack -p --config webpack.config.js",
+    "startX": "npm run css-watch",
+    "start": "webpack --config ssfl/static/webpack.dev.js",
     "dev-build": "webpack -d --config ssfl/static/webpack.config.js",
     "list-modules": "webpack --display_modules"
   },
