--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "imports-loader": "^0.8.0",
     "jquery": "^3.5.0",
     "node-sass": "^4.14.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
