Modify Config files to specify problem reporting recipients

--- a/.env
+++ b/.env
@@ -22,3 +22,6 @@ USER_DIRECTORY_STATIC = /home/don/devel/ssflask_content_files/
 USER_DIRECTORY_IMAGES = /home/don/devel/ssflask2/ssfl/static/gallery/
 TEMP_FILE_LOC = /home/don/devel/temp/
 STORAGE_CONTAINER = /home/don/devel/ssflask_content_files/cloudy/
+
+EMAIL_PROBLEM_REPORTS = True
+PROBLEM_REPORT_RECIPIENTS = 'don@theoxleys.com'
