--- a/.env_PA
+++ b/.env_PA
@@ -23,3 +23,6 @@ USER_DIRECTORY_IMAGES = /home/doxley/ssflask2/ssfl/static/gallery/
 TEMP_FILE_LOC = /home/doxley/temp/
 
 STORAGE_CONTAINER = /home/doxley/ssflask2/work/cloudy/
+
+EMAIL_PROBLEM_REPORTS = True
+PROBLEM_REPORT_RECIPIENTS = 'don@theoxleys.com, glatze@comcast.net'
