--- a/.env_SP
+++ b/.env_SP
@@ -21,3 +21,6 @@ USER_DIRECTORY_STATIC = C:\Users\glatz\PycharmProjects\devel\ssflask_content_fil
 USER_DIRECTORY_IMAGES = C:\Users\glatz\PycharmProjects\devel\ssflask2\ssfl\static\gallery\
 TEMP_FILE_LOC = C:\Users\glatz\PycharmProjects\devel\temp\ssflask\
 STORAGE_CONTAINER = C:\Users\glatz\PycharmProjects\devel\ssflask_content_files\cloudy\
+
+EMAIL_PROBLEM_REPORTS = True
+PROBLEM_REPORT_RECIPIENTS = 'glatze@comcast.net'
