Update .env_PA to new web address - oops - missed a place

--- a/.env_PA
+++ b/.env_PA
@@ -2,7 +2,7 @@ TESTING=True
 DEBUG=True
 SECRET_KEY=_5#y2L"F4E?9*&xec]/_5#y2L"F4E?9*&xec]/
 SESSION_COOKIE_NAME=my_cookie
-SERVER_NAME=doxley.pythonanywhere.com
+SERVER_NAME=www.sunnyside-times.org
 LOG_DIRECTORY=/home/doxley/ssflask2/logs/
 SYSTEM_HOST = http://www.sunnyside-times.org
 
