--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "src_css",
+  "name": "src_sunnyside-times",
   "version": "1.0.0",
   "description": "Package for files for Sunnyside Resident Website",
-  "main": "ssfl/static/sass/mystyles.scss",
+  "main": "sst.js",
   "dependencies": {
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
@@ -39,10 +39,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
-    "css-build": "node-sass --omit-source-map-url ssfl/static/sass/mystyles.scss ssfl/static/css/nav_mystyles.css",
+    "css-build": "node-sass ssfl/static/sass/mystyles.scss ssfl/static/css/nav_mystyles.css",
+    "css-buildX": "node-sass --omit-source-map-url ssfl/static/sass/mystyles.scss ssfl/static/css/nav_mystyles.css",
     "css-watch": "npm run css-build -- --watch",
     "startX": "npm run css-watch",
-    "start": "webpack --config ssfl/static/webpack.dev.js",
+    "start": "webpack --config ssfl/static/webpack.config.js",
     "dev-build": "webpack -d --config ssfl/static/webpack.config.js",
     "list-modules": "webpack --display_modules"
   },
